NDN-DIRECT-IND (2021-07-23)
---------------------------

Changes
* Forked from NDN-JS commit c289a6a3d7a6357be043abbab6392d6bcf30a36d . (This is
  a few commits after the tag for v0.19.0 .) The previous CHANGELOG is moved to
  CHANGELOG.archive .
* Add ShiftLeft action workflow config.
* Remove FireflyFace and the demo in examples/firefly/firefly-chat.
* Remove obsolete Name-based Access Control v1. (Keep v2.)
* In NAC, add support for a group content key (GCK) and secured interest.
* In KeyChain, remove obsolete security v1 API.
* Remove support for obsolete AES-128-ECB and AES-256-ECB.
* In TpmPrivateKey: Make the encryption algorithm a member variable.
* Support X509 certificate format and validation https://github.com/operantnetworks/ndn-direct-ind/pull/22
* Support X509 CRL format https://github.com/operantnetworks/ndn-direct-ind/pull/24